--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,10 @@
     -->
     <title>Verano</title>
     <!-- Material icons -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -35,7 +38,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       <!--Script que tiene la funcionalidad de iniciar los componentes pertenecientes a materialize (modal, tooltips, etc). -->
       <script>
-        document.addEventListener('DOMContentLoaded', function(){
+        document.addEventListener("DOMContentLoaded", function() {
           M.AutoInit();
         });
       </script>
