--- a/public/index.html
+++ b/public/index.html
@@ -34,13 +34,13 @@
   </head>
   <body>
     <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
     <!--Script que tiene la funcionalidad de iniciar los componentes pertenecientes a materialize (modal, tooltips, etc). -->
-    <script>
+    <!-- <script>
       document.addEventListener("DOMContentLoaded", function() {
         M.AutoInit();
       });
-    </script>
+    </script> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
