--- a/public/index.html
+++ b/public/index.html
@@ -43,5 +43,6 @@
     </script> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="modal"></div>
   </body>
 </html>
